# charmap

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yaml
src/: actionmap.rs  charmapper.rs  lib.rs
tests/: data.rs  test_hashbrown.rs  test_phf.rs  test_std.rs
